--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPlayer">#8090a4ae</color>
+    <color name="colorTextView">#80FFFFFF</color>
+    <color name="colorButton">#80b2ebf2</color>
+
 </resources>
